scripts/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pix-business-service
  namespace: pix-business
  labels:
    app: pix-business-web
spec:
  ports:
    - name: pix-business-web
      port: 3000
  selector:
    app: pix-business-web
