scripts/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pix-business-web
  namespace: pix-business
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: Authorization, origin, accept
    nginx.ingress.kubernetes.io/cors-allow-methods: GET, OPTIONS, POST, PUT, DELETE
    nginx.ingress.kubernetes.io/enable-cors: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "35000"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "35000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "35000"
    nginx.ingress.kubernetes.io/send-timeout: "35000"
spec:
  rules:
    - host: pix-business.thecodeworkers.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: pix-business-service
                port:
                  number: 3000
  tls:
    - hosts:
      - pix-business.thecodeworkers.com
      secretName: pix-business-thecodeworkers-com-tls
